1999-08-04  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* eval.c (SCM_CEVAL): Improvements to SCM_IM_DISPATCH and
	SCM_IM_HASH_DISPATCH.

	* objects.h (SCM_CLASSF_GOOPS_VALID): Added.
	(scm_si_redfined, scm_si_hashsets): Moved.

	* objects.c (scm_class_of): Use the new SCM_CLASSF_GOOPS_VALID
	flag which combines type and status info so that the class
	redefinition protocol has zero cost during normal execution.

1999-08-03  Gary Houston  <ghouston@easynet.co.uk>

	* ports.h (scm_ptob_descriptor): include a write procedure again.
	it's more efficient for unbuffered fports (e.g., sockets.)

	* ports.c (scm_puts): use ptob->write.
	* vports.c (scm_make_sfptob): set write proc in ptob.
	* strports.c (scm_make_stptob): set write proc in ptob.
	* ports.c (write_void_port): new procedure.
	* vports.c (sf_write): new procedure.
	* ports.c (scm_lfwrite): use ptob->write.
	* strports.c (st_write): new procedure.
	* fports.c (fport_write): new procedure.
	(scm_make_fptob): set write in ptob to fport_write.
	* ports.h: prototype for scm_set_port_write.
	* ports.c (scm_make_port_type): initialise ptob write procedure.
	(scm_set_port_write): new proc.

1999-08-01  Jim Blandy  <jimb@savonarola.red-bean.com>

	* ports.c (scm_char_ready_p): Don't try to find PORT's ptab entry
	until we've verified that it is actually a port.  (Thanks to
	Lorentey Karoly.)

1999-07-31  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* gc.c (scm_must_malloc, scm_must_realloc): Removed unnecessary
	code, particularly an unnecessary test (len != size, where len ==
	size).  (Was this leftovers from debugging code, or have I missed
	something profound?)

	* hashtab.c: Bugfix: Don't declare s_hash_fold without storage
	size. (Thanks to James Dean Palmer.)

	* numbers.c (scm_makdbl): Bugfix: Initialize imaginary part.
	(Thanks to Lorentey Karoly.)

1999-07-30  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* eval.c (scm_m_expand_body): Use scm_cons_source.
